# excel-ngrams

./: .flake8  .gitignore  .readthedocs.yml  README.md  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
input_for_tests/: test_input.xlsx
src/excel_ngrams/: console.py  file_handler.py  grammer.py
tests/: __init__.py  conftest.py  test_console.py  test_file_handler.py  test_grammer.py
