[tool.poetry]
name = "excel-ngrams"
version = "0.1.0"
description = "An app to output n-grams from column in Excel spreadsheet"
authors = ["mattyocode <matthewoliver@live.co.uk>"]
repository = "https://github.com/mattyocode/excel-ngrams"
keywords = ["Excel", "n-grams"]

[tool.poetry.scripts]
excel-ngrams = "excel_ngrams.console:main"

[tool.poetry.dependencies]
python = "^3.7.1"
click = "^7.1.2"
pandas = "^1.2.1"
openpyxl = "^3.0.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
coverage = {version = "^5.3.1", extras = ["toml"]}
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
